feat: import the postings of a search
